[gd_scene load_steps=16 format=3 uid="uid://cp4jyu6n64nfy"]

[ext_resource type="Script" path="res://scene/story.gd" id="1_gsngj"]
[ext_resource type="Texture2D" uid="uid://v7ccculbcgxw" path="res://images/screens/background.png" id="2_3y5o8"]
[ext_resource type="Texture2D" uid="uid://bb2anutudw0ih" path="res://images/icons/detailsSpriteSheet.png" id="3_gww6g"]
[ext_resource type="FontFile" uid="uid://dpurdx5epwyd" path="res://fonts/Poppins-Regular.ttf" id="4_jysxa"]
[ext_resource type="FontFile" uid="uid://bdbs0kdxuk3qq" path="res://fonts/Poppins-Bold.ttf" id="5_ktmb1"]
[ext_resource type="FontFile" uid="uid://ci0dsnrbxcv78" path="res://fonts/Poppins-Italic.ttf" id="6_fjbxp"]
[ext_resource type="StyleBox" uid="uid://ot2or1x7kljp" path="res://styles/button.tres" id="6_j7801"]
[ext_resource type="StyleBox" uid="uid://bg1q1f0dxs6es" path="res://styles/hoverClick.tres" id="7_4dvxj"]
[ext_resource type="FontFile" uid="uid://hol1sjfkmd37" path="res://fonts/PixeloidSans-Bold.ttf" id="7_ytgtk"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u68tv"]
texture = ExtResource("2_3y5o8")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
10:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
8:23/0 = 0
9:23/0 = 0
10:23/0 = 0
11:23/0 = 0
12:23/0 = 0
13:23/0 = 0
0:24/0 = 0
1:24/0 = 0
2:24/0 = 0
3:24/0 = 0
4:24/0 = 0
5:24/0 = 0
6:24/0 = 0
7:24/0 = 0
8:24/0 = 0
9:24/0 = 0
10:24/0 = 0
11:24/0 = 0
12:24/0 = 0
13:24/0 = 0
0:25/0 = 0
1:25/0 = 0
2:25/0 = 0
3:25/0 = 0
4:25/0 = 0
5:25/0 = 0
6:25/0 = 0
7:25/0 = 0
8:25/0 = 0
9:25/0 = 0
10:25/0 = 0
11:25/0 = 0
12:25/0 = 0
13:25/0 = 0
0:26/0 = 0
1:26/0 = 0
2:26/0 = 0
3:26/0 = 0
4:26/0 = 0
5:26/0 = 0
6:26/0 = 0
7:26/0 = 0
8:26/0 = 0
9:26/0 = 0
10:26/0 = 0
11:26/0 = 0
12:26/0 = 0
13:26/0 = 0
0:27/0 = 0
1:27/0 = 0
2:27/0 = 0
3:27/0 = 0
4:27/0 = 0
5:27/0 = 0
6:27/0 = 0
7:27/0 = 0
8:27/0 = 0
9:27/0 = 0
10:27/0 = 0
11:27/0 = 0
12:27/0 = 0
13:27/0 = 0
0:28/0 = 0
1:28/0 = 0
2:28/0 = 0
3:28/0 = 0
4:28/0 = 0
5:28/0 = 0
6:28/0 = 0
7:28/0 = 0
8:28/0 = 0
9:28/0 = 0
10:28/0 = 0
11:28/0 = 0
12:28/0 = 0
13:28/0 = 0
0:29/0 = 0
1:29/0 = 0
2:29/0 = 0
3:29/0 = 0
4:29/0 = 0
5:29/0 = 0
6:29/0 = 0
7:29/0 = 0
8:29/0 = 0
9:29/0 = 0
10:29/0 = 0
11:29/0 = 0
12:29/0 = 0
13:29/0 = 0
0:30/0 = 0
1:30/0 = 0
2:30/0 = 0
3:30/0 = 0
4:30/0 = 0
5:30/0 = 0
6:30/0 = 0
7:30/0 = 0
8:30/0 = 0
9:30/0 = 0
10:30/0 = 0
11:30/0 = 0
12:30/0 = 0
13:30/0 = 0
0:31/0 = 0
1:31/0 = 0
2:31/0 = 0
3:31/0 = 0
4:31/0 = 0
5:31/0 = 0
6:31/0 = 0
7:31/0 = 0
8:31/0 = 0
9:31/0 = 0
10:31/0 = 0
11:31/0 = 0
12:31/0 = 0
13:31/0 = 0
0:32/0 = 0
1:32/0 = 0
2:32/0 = 0
3:32/0 = 0
4:32/0 = 0
5:32/0 = 0
6:32/0 = 0
7:32/0 = 0
8:32/0 = 0
9:32/0 = 0
10:32/0 = 0
11:32/0 = 0
12:32/0 = 0
13:32/0 = 0
0:33/0 = 0
1:33/0 = 0
2:33/0 = 0
3:33/0 = 0
4:33/0 = 0
5:33/0 = 0
6:33/0 = 0
7:33/0 = 0
8:33/0 = 0
9:33/0 = 0
10:33/0 = 0
11:33/0 = 0
12:33/0 = 0
13:33/0 = 0
0:34/0 = 0
1:34/0 = 0
2:34/0 = 0
3:34/0 = 0
4:34/0 = 0
5:34/0 = 0
6:34/0 = 0
7:34/0 = 0
8:34/0 = 0
9:34/0 = 0
10:34/0 = 0
11:34/0 = 0
12:34/0 = 0
13:34/0 = 0
0:35/0 = 0
1:35/0 = 0
2:35/0 = 0
3:35/0 = 0
4:35/0 = 0
5:35/0 = 0
6:35/0 = 0
7:35/0 = 0
8:35/0 = 0
9:35/0 = 0
10:35/0 = 0
11:35/0 = 0
12:35/0 = 0
13:35/0 = 0
0:36/0 = 0
1:36/0 = 0
2:36/0 = 0
3:36/0 = 0
4:36/0 = 0
5:36/0 = 0
6:36/0 = 0
7:36/0 = 0
8:36/0 = 0
9:36/0 = 0
10:36/0 = 0
11:36/0 = 0
12:36/0 = 0
13:36/0 = 0
0:37/0 = 0
1:37/0 = 0
2:37/0 = 0
3:37/0 = 0
4:37/0 = 0
5:37/0 = 0
6:37/0 = 0
7:37/0 = 0
8:37/0 = 0
9:37/0 = 0
10:37/0 = 0
11:37/0 = 0
12:37/0 = 0
13:37/0 = 0
0:38/0 = 0
1:38/0 = 0
2:38/0 = 0
3:38/0 = 0
4:38/0 = 0
5:38/0 = 0
6:38/0 = 0
7:38/0 = 0
8:38/0 = 0
9:38/0 = 0
10:38/0 = 0
11:38/0 = 0
12:38/0 = 0
13:38/0 = 0
0:39/0 = 0
1:39/0 = 0
2:39/0 = 0
3:39/0 = 0
4:39/0 = 0
5:39/0 = 0
6:39/0 = 0
7:39/0 = 0
8:39/0 = 0
9:39/0 = 0
10:39/0 = 0
11:39/0 = 0
12:39/0 = 0
13:39/0 = 0
0:40/0 = 0
1:40/0 = 0
2:40/0 = 0
3:40/0 = 0
4:40/0 = 0
5:40/0 = 0
6:40/0 = 0
7:40/0 = 0
8:40/0 = 0
9:40/0 = 0
10:40/0 = 0
11:40/0 = 0
12:40/0 = 0
13:40/0 = 0
0:41/0 = 0
1:41/0 = 0
2:41/0 = 0
3:41/0 = 0
4:41/0 = 0
5:41/0 = 0
6:41/0 = 0
7:41/0 = 0
8:41/0 = 0
9:41/0 = 0
10:41/0 = 0
11:41/0 = 0
12:41/0 = 0
13:41/0 = 0
0:42/0 = 0
1:42/0 = 0
2:42/0 = 0
3:42/0 = 0
4:42/0 = 0
5:42/0 = 0
6:42/0 = 0
7:42/0 = 0
8:42/0 = 0
9:42/0 = 0
10:42/0 = 0
11:42/0 = 0
12:42/0 = 0
13:42/0 = 0
0:43/0 = 0
1:43/0 = 0
2:43/0 = 0
3:43/0 = 0
4:43/0 = 0
5:43/0 = 0
6:43/0 = 0
7:43/0 = 0
8:43/0 = 0
9:43/0 = 0
10:43/0 = 0
11:43/0 = 0
12:43/0 = 0
13:43/0 = 0
0:44/0 = 0
1:44/0 = 0
2:44/0 = 0
3:44/0 = 0
4:44/0 = 0
5:44/0 = 0
6:44/0 = 0
7:44/0 = 0
8:44/0 = 0
9:44/0 = 0
10:44/0 = 0
11:44/0 = 0
12:44/0 = 0
13:44/0 = 0
0:45/0 = 0
1:45/0 = 0
2:45/0 = 0
3:45/0 = 0
4:45/0 = 0
5:45/0 = 0
6:45/0 = 0
7:45/0 = 0
8:45/0 = 0
9:45/0 = 0
10:45/0 = 0
11:45/0 = 0
12:45/0 = 0
13:45/0 = 0
0:46/0 = 0
1:46/0 = 0
2:46/0 = 0
3:46/0 = 0
4:46/0 = 0
5:46/0 = 0
6:46/0 = 0
7:46/0 = 0
8:46/0 = 0
9:46/0 = 0
10:46/0 = 0
11:46/0 = 0
12:46/0 = 0
13:46/0 = 0
0:47/0 = 0
1:47/0 = 0
2:47/0 = 0
3:47/0 = 0
4:47/0 = 0
5:47/0 = 0
6:47/0 = 0
7:47/0 = 0
8:47/0 = 0
9:47/0 = 0
10:47/0 = 0
11:47/0 = 0
12:47/0 = 0
13:47/0 = 0
0:48/0 = 0
1:48/0 = 0
2:48/0 = 0
3:48/0 = 0
4:48/0 = 0
5:48/0 = 0
6:48/0 = 0
7:48/0 = 0
8:48/0 = 0
9:48/0 = 0
10:48/0 = 0
11:48/0 = 0
12:48/0 = 0
13:48/0 = 0
0:49/0 = 0
1:49/0 = 0
2:49/0 = 0
3:49/0 = 0
4:49/0 = 0
5:49/0 = 0
6:49/0 = 0
7:49/0 = 0
8:49/0 = 0
9:49/0 = 0
10:49/0 = 0
11:49/0 = 0
12:49/0 = 0
13:49/0 = 0
0:50/0 = 0
1:50/0 = 0
2:50/0 = 0
3:50/0 = 0
4:50/0 = 0
5:50/0 = 0
6:50/0 = 0
7:50/0 = 0
8:50/0 = 0
9:50/0 = 0
10:50/0 = 0
11:50/0 = 0
12:50/0 = 0
13:50/0 = 0
0:51/0 = 0
1:51/0 = 0
2:51/0 = 0
3:51/0 = 0
4:51/0 = 0
5:51/0 = 0
6:51/0 = 0
7:51/0 = 0
8:51/0 = 0
9:51/0 = 0
10:51/0 = 0
11:51/0 = 0
12:51/0 = 0
13:51/0 = 0
0:52/0 = 0
1:52/0 = 0
2:52/0 = 0
3:52/0 = 0
4:52/0 = 0
5:52/0 = 0
6:52/0 = 0
7:52/0 = 0
8:52/0 = 0
9:52/0 = 0
10:52/0 = 0
11:52/0 = 0
12:52/0 = 0
13:52/0 = 0
0:53/0 = 0
1:53/0 = 0
2:53/0 = 0
3:53/0 = 0
4:53/0 = 0
5:53/0 = 0
6:53/0 = 0
7:53/0 = 0
8:53/0 = 0
9:53/0 = 0
10:53/0 = 0
11:53/0 = 0
12:53/0 = 0
13:53/0 = 0
0:54/0 = 0
1:54/0 = 0
2:54/0 = 0
3:54/0 = 0
4:54/0 = 0
5:54/0 = 0
6:54/0 = 0
7:54/0 = 0
8:54/0 = 0
9:54/0 = 0
10:54/0 = 0
11:54/0 = 0
12:54/0 = 0
13:54/0 = 0
0:55/0 = 0
1:55/0 = 0
2:55/0 = 0
3:55/0 = 0
4:55/0 = 0
5:55/0 = 0
6:55/0 = 0
7:55/0 = 0
8:55/0 = 0
9:55/0 = 0
10:55/0 = 0
11:55/0 = 0
12:55/0 = 0
13:55/0 = 0
0:56/0 = 0
1:56/0 = 0
2:56/0 = 0
3:56/0 = 0
4:56/0 = 0
5:56/0 = 0
6:56/0 = 0
7:56/0 = 0
8:56/0 = 0
9:56/0 = 0
10:56/0 = 0
11:56/0 = 0
12:56/0 = 0
13:56/0 = 0
0:57/0 = 0
1:57/0 = 0
2:57/0 = 0
3:57/0 = 0
4:57/0 = 0
5:57/0 = 0
6:57/0 = 0
7:57/0 = 0
8:57/0 = 0
9:57/0 = 0
10:57/0 = 0
11:57/0 = 0
12:57/0 = 0
13:57/0 = 0
0:58/0 = 0
1:58/0 = 0
2:58/0 = 0
3:58/0 = 0
4:58/0 = 0
5:58/0 = 0
6:58/0 = 0
7:58/0 = 0
8:58/0 = 0
9:58/0 = 0
10:58/0 = 0
11:58/0 = 0
12:58/0 = 0
13:58/0 = 0
0:59/0 = 0
1:59/0 = 0
2:59/0 = 0
3:59/0 = 0
4:59/0 = 0
5:59/0 = 0
6:59/0 = 0
7:59/0 = 0
8:59/0 = 0
9:59/0 = 0
10:59/0 = 0
11:59/0 = 0
12:59/0 = 0
13:59/0 = 0
0:60/0 = 0
1:60/0 = 0
2:60/0 = 0
3:60/0 = 0
4:60/0 = 0
5:60/0 = 0
6:60/0 = 0
7:60/0 = 0
8:60/0 = 0
9:60/0 = 0
10:60/0 = 0
11:60/0 = 0
12:60/0 = 0
13:60/0 = 0
0:61/0 = 0
1:61/0 = 0
2:61/0 = 0
3:61/0 = 0
4:61/0 = 0
5:61/0 = 0
6:61/0 = 0
7:61/0 = 0
8:61/0 = 0
9:61/0 = 0
10:61/0 = 0
11:61/0 = 0
12:61/0 = 0
13:61/0 = 0
0:62/0 = 0
1:62/0 = 0
2:62/0 = 0
3:62/0 = 0
4:62/0 = 0
5:62/0 = 0
6:62/0 = 0
7:62/0 = 0
8:62/0 = 0
9:62/0 = 0
10:62/0 = 0
11:62/0 = 0
12:62/0 = 0
13:62/0 = 0
0:63/0 = 0
1:63/0 = 0
2:63/0 = 0
3:63/0 = 0
4:63/0 = 0
5:63/0 = 0
6:63/0 = 0
7:63/0 = 0
8:63/0 = 0
9:63/0 = 0
10:63/0 = 0
11:63/0 = 0
12:63/0 = 0
13:63/0 = 0
0:64/0 = 0
1:64/0 = 0
2:64/0 = 0
3:64/0 = 0
4:64/0 = 0
5:64/0 = 0
6:64/0 = 0
7:64/0 = 0
8:64/0 = 0
9:64/0 = 0
10:64/0 = 0
11:64/0 = 0
12:64/0 = 0
13:64/0 = 0
0:65/0 = 0
1:65/0 = 0
2:65/0 = 0
3:65/0 = 0
4:65/0 = 0
5:65/0 = 0
6:65/0 = 0
7:65/0 = 0
8:65/0 = 0
9:65/0 = 0
10:65/0 = 0
11:65/0 = 0
12:65/0 = 0
13:65/0 = 0
0:66/0 = 0
1:66/0 = 0
2:66/0 = 0
3:66/0 = 0
4:66/0 = 0
5:66/0 = 0
6:66/0 = 0
7:66/0 = 0
8:66/0 = 0
9:66/0 = 0
10:66/0 = 0
11:66/0 = 0
12:66/0 = 0
13:66/0 = 0
0:67/0 = 0
1:67/0 = 0
2:67/0 = 0
3:67/0 = 0
4:67/0 = 0
5:67/0 = 0
6:67/0 = 0
7:67/0 = 0
8:67/0 = 0
9:67/0 = 0
10:67/0 = 0
11:67/0 = 0
12:67/0 = 0
13:67/0 = 0
0:68/0 = 0
1:68/0 = 0
2:68/0 = 0
3:68/0 = 0
4:68/0 = 0
5:68/0 = 0
6:68/0 = 0
7:68/0 = 0
8:68/0 = 0
9:68/0 = 0
10:68/0 = 0
11:68/0 = 0
12:68/0 = 0
13:68/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gf875"]
texture = ExtResource("3_gww6g")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
1:3/0 = 0
1:4/0 = 0
1:5/0 = 0

[sub_resource type="TileSet" id="TileSet_06jev"]
sources/0 = SubResource("TileSetAtlasSource_u68tv")
sources/1 = SubResource("TileSetAtlasSource_gf875")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2uec2"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.729412)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lf2pq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4wfjm"]

[node name="Story" type="CanvasLayer"]
script = ExtResource("1_gsngj")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_06jev")
format = 2
layer_0/name = "background"
layer_0/tile_data = PackedInt32Array(0, 327680, 25, 65536, 327680, 25, 131072, 327680, 25, 196608, 327680, 25, 262144, 327680, 25, 327680, 327680, 25, 393216, 327680, 25, 458752, 327680, 25, 524288, 327680, 25, 589824, 327680, 25, 1, 327680, 25, 65537, 327680, 25, 131073, 327680, 25, 196609, 327680, 25, 262145, 327680, 25, 327681, 327680, 25, 393217, 327680, 25, 458753, 327680, 25, 524289, 327680, 25, 589825, 327680, 25, 2, 327680, 25, 65538, 327680, 25, 131074, 327680, 25, 196610, 327680, 25, 262146, 327680, 25, 327682, 327680, 25, 393218, 327680, 25, 458754, 327680, 25, 524290, 327680, 25, 589826, 327680, 25, 3, 327680, 25, 65539, 327680, 25, 131075, 327680, 25, 196611, 327680, 25, 262147, 327680, 25, 327683, 327680, 25, 393219, 327680, 25, 458755, 327680, 25, 524291, 327680, 25, 589827, 327680, 25, 4, 327680, 25, 65540, 327680, 25, 131076, 327680, 25, 196612, 327680, 25, 262148, 327680, 25, 327684, 327680, 25, 393220, 327680, 25, 458756, 327680, 25, 524292, 327680, 25, 589828, 327680, 25, 5, 327680, 25, 65541, 327680, 25, 131077, 327680, 25, 196613, 327680, 25, 262149, 327680, 25, 327685, 327680, 25, 393221, 327680, 25, 458757, 327680, 25, 524293, 327680, 25, 589829, 327680, 25, 6, 327680, 25, 65542, 327680, 25, 131078, 327680, 25, 196614, 327680, 25, 262150, 327680, 25, 327686, 327680, 25, 393222, 327680, 25, 458758, 327680, 25, 524294, 327680, 25, 589830, 327680, 25, 7, 327680, 25, 65543, 327680, 25, 131079, 327680, 25, 196615, 327680, 25, 262151, 327680, 25, 327687, 327680, 25, 393223, 327680, 25, 458759, 327680, 25, 524295, 327680, 25, 589831, 327680, 25, 8, 327680, 25, 65544, 327680, 25, 131080, 327680, 25, 196616, 327680, 25, 262152, 327680, 25, 327688, 327680, 25, 393224, 327680, 25, 458760, 327680, 25, 524296, 327680, 25, 589832, 327680, 25, 9, 327680, 25, 65545, 327680, 25, 131081, 327680, 25, 196617, 327680, 25, 262153, 327680, 25, 327689, 327680, 25, 393225, 327680, 25, 458761, 327680, 25, 524297, 327680, 25, 589833, 327680, 25, 10, 327680, 25, 65546, 327680, 25, 131082, 327680, 25, 196618, 327680, 25, 262154, 327680, 25, 327690, 327680, 25, 393226, 327680, 25, 458762, 327680, 25, 524298, 327680, 25, 589834, 327680, 25, 11, 327680, 25, 65547, 327680, 25, 131083, 327680, 25, 196619, 327680, 25, 262155, 327680, 25, 327691, 327680, 25, 393227, 327680, 25, 458763, 327680, 25, 524299, 327680, 25, 589835, 327680, 25, 12, 327680, 25, 65548, 327680, 25, 131084, 327680, 25, 196620, 327680, 25, 262156, 327680, 25, 327692, 327680, 25, 393228, 327680, 25, 458764, 327680, 25, 524300, 327680, 25, 589836, 327680, 25, 13, 327680, 25, 65549, 327680, 25, 131085, 327680, 25, 196621, 327680, 25, 262157, 327680, 25, 327693, 327680, 25, 393229, 327680, 25, 458765, 327680, 25, 524301, 327680, 25, 589837, 327680, 25)
layer_1/name = "details"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(0, 65537, 1, 1, 65537, 1, 65536, 65537, 1, 131076, 65537, 1, 8, 65537, 1, 12, 65537, 1, 458765, 65537, 1, 524301, 65537, 1, 589837, 65537, 1, 524300, 65537, 1, 131072, 262145, 1, 13, 262145, 1)

[node name="Control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="PanelContainer" type="PanelContainer" parent="Control2/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2uec2")

[node name="VBoxContainer" type="VBoxContainer" parent="Control2/MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="Control2/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7
theme_override_styles/panel = SubResource("StyleBoxEmpty_lf2pq")

[node name="RichTextLabel" type="RichTextLabel" parent="Control2/MarginContainer/PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.207843, 0.258824, 0.258824, 1)
theme_override_fonts/normal_font = ExtResource("4_jysxa")
theme_override_fonts/bold_font = ExtResource("5_ktmb1")
theme_override_fonts/italics_font = ExtResource("6_fjbxp")
theme_override_font_sizes/normal_font_size = 7
theme_override_font_sizes/bold_font_size = 7
theme_override_font_sizes/italics_font_size = 7
bbcode_enabled = true
fit_content = true

[node name="PanelContainer2" type="PanelContainer" parent="Control2/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
size_flags_stretch_ratio = 0.2
theme_override_styles/panel = SubResource("StyleBoxEmpty_4wfjm")

[node name="Button" type="Button" parent="Control2/MarginContainer/PanelContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_ytgtk")
theme_override_font_sizes/font_size = 9
theme_override_styles/normal = ExtResource("6_j7801")
theme_override_styles/hover = ExtResource("7_4dvxj")
theme_override_styles/pressed = ExtResource("7_4dvxj")
text = "V"

[connection signal="pressed" from="Control2/MarginContainer/PanelContainer/VBoxContainer/PanelContainer2/Button" to="." method="_on_button_pressed"]
